--- a/Frontend/views/dashboard.html
+++ b/Frontend/views/dashboard.html
@@ -34,7 +34,7 @@
     <nav class="bg-white shadow-md">
         <div class="container mx-auto flex items-center justify-between py-4 px-6">
             <!-- Logo y nombre -->
-            <a href="#" class="text-primary text-2xl font-bold">SIGA</a>
+            <a href="index.html" class="text-primary text-2xl font-bold">SIGA</a>
 
             <!-- Menú -->
             <div class="flex space-x-8">
