--- a/Frontend/views/dashboard.html
+++ b/Frontend/views/dashboard.html
@@ -40,11 +40,21 @@
             <div class="flex space-x-8">
                 <a href="#" onclick="showProveedores()"
                     class="text-secondary hover:text-primary transition font-medium">Gestionar Proveedores</a>
+                    <a href="#" onclick="showModelovehiculo()"
+                    class="text-secondary hover:text-primary transition font-medium">Gestionar Modelovehiculo</a>
+                    <a href="#" onclick="showOrdenesTrabajo()"
+                    class="text-secondary hover:text-primary transition font-medium">Gestionar ordenTrabajo</a>
+                    <a href="#" onclick="showVehiculos()"
+                    class="text-secondary hover:text-primary transition font-medium">Gestionar Vehiculos</a>
+                    <a href="#" onclick="showMarcaVehiculos()"
+                    class="text-secondary hover:text-primary transition font-medium">Gestionar Marca</a>
                 <a href="#" onclick="showNroCompra()"
                     class="text-secondary hover:text-primary transition font-medium">Gestionar Números de Compra</a>
                 <a href="#" onclick="showDetalleCompra()"
                     class="text-secondary hover:text-primary transition font-medium">Gestionar Detalle de Compra</a>
                 <!-- Nueva opción -->
+                <a href="#" onclick="showTipoTrabajo()"
+                class="text-secondary hover:text-primary transition font-medium">Gestionar Tipo de Trabajo</a>
                 <a href="#" onclick="showProductos()"
                     class="text-secondary hover:text-primary transition font-medium">Gestionar Productos</a>
                 <!-- Nueva opción para productos -->
